--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9889,3 +9889,13 @@ a.text-dark:hover {
   }
 }
 
+body {
+  padding-top: 54px;
+}
+
+@media (min-width: 992px) {
+  body body {
+    padding-top: 56px;
+  }
+}
+
