--- a/public/css/admin/admin.css
+++ b/public/css/admin/admin.css
@@ -356,3 +356,7 @@ nav.nav-border {
     border-bottom-right-radius: 0;
     border-top-left-radius: 0.25rem;
     border-bottom-left-radius: 0.25rem; }
+.custom{
+     max-height: 700px !important;
+}
+
